libsoup2.4 (2.29.91-2) UNRELEASED; urgency=low

  * debian/rules:
    - Enable the test suite during the build, but don't make it fatal yet.
  * debian/control.in:
    - Build dep on shared-mime-info, needed for one test to pass.
    - Reorder build-deps a bit.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 11 Mar 2010 22:36:22 +0100

libsoup2.4 (2.29.91-1) unstable; urgency=low

  * New upstream development release.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 23 Feb 2010 10:33:41 +0100

libsoup2.4 (2.29.90-1) unstable; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libsoup2.4-1.symbols:
      - Update for new API.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 09 Feb 2010 16:55:02 +0100

libsoup2.4 (2.29.6-1) unstable; urgency=low

  * New upstream development release.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 26 Jan 2010 08:17:46 +0100

libsoup2.4 (2.29.5-2) unstable; urgency=low

  * debian/libsoup*.symbols:
    + Fix symbol files.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 13 Jan 2010 10:23:15 +0100

libsoup2.4 (2.29.5-1) unstable; urgency=low

  * New upstream development release (Closes: #564698):
    + debian/rules:
      - Update SHVER to 2.29.5 for new API.
    + debian/rules,
      debian/libsoup*.symbols:
      - Add symbol files.
    + debian/rules:
      - Remove check-dist.mk include to upload to unstable.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 13 Jan 2010 09:45:56 +0100

libsoup2.4 (2.29.3-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules:
      - Include check-dist.mk to prevent accidental uploads to unstable.
      - Update SHVER to 2.29.3 for new API.
    + debian/patches/redirect_head.patch,
      debian/patches/sqlite_strcmp_null_string.patch:
      - Dropped, merged upstream.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 01 Dec 2009 16:23:28 +0100

libsoup2.4 (2.28.1-3) unstable; urgency=low

  * debian/patches/redirect_head.patch: